Closed Bug 254049 Opened 20 years ago Closed 20 years ago

While adding an email address via addressbook to an email mozilla crashes (gtk1, mail compose)

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: svdmade, Assigned: standard8)

References

Details

(Keywords: crash)

Attachments

(2 files)

Steps to reproduce

1 Open mozilla Brwoser and email
2 Compose an email
3.1 Open addressbook
3.2 Add an email address from the addressbook
4 Click ok on addressbook to add email adress and close
5 Crash

I'm running mozilla Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3)
Gecko/20040802
Stef: Could you provide TalkBack incident ID?
Severity: normal → critical
Keywords: crash
Unfortunatly I didn't get the opertunity to send a crash report. I could try and
create a backtrace if you would like that ?
Attached file strace of crash
I've created an strace of the email crash
Using this build Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3)
Gecko/20040811  the gtk2+ version I don't get the error anymore. 
I had reported this bug in de.comm.software.mozilla.nightly-builds for the
trunk-nightly 20040731, <410BD5AC.9030109@hfigge.myfqdn.de>

Since then each of my selfcompiled nighlies crashed, if

^m
open addressbook in composer
choose name, press To->, press OK

After reading comment 4 i changed my options from
--enable-default-toolkit=gtk --enable-toolkit=gtk to
--enable-default-toolkit=gtk2 --enable-toolkit=gtk2
and compiled the same source. Now the crash is gone,

The reason why i prefer gtk is, that i cannot open pdf-documents with the
browser if i have compiled my nightly with gtk2.

Scylla and charybdis.
toAddress:
Gdk-ERROR **: BadPixmap (invalid Pixmap parameter)
  serial 27355 error_code 4 request_code 54 minor_code 0

Program exited with code 01.
Assignee: sspitzer → blizzard
Component: Composition → GFX: Gtk
Product: MailNews → Browser
QA Contact: ian
(gdb) bt
#0  0x402529d6 in gdk_x_error () from /opt/gnome/lib/libgdk-1.2.so.0
#1  0x402f7eac in _XError () from /usr/X11R6/lib/libX11.so.6
#2  0x402f99b6 in _XReply () from /usr/X11R6/lib/libX11.so.6
#3  0x402f3bd4 in XSync () from /usr/X11R6/lib/libX11.so.6
#4  0x402f3dc3 in _XSyncFunction () from /usr/X11R6/lib/libX11.so.6
#5  0x402dd885 in XFreePixmap () from /usr/X11R6/lib/libX11.so.6
#6  0x40269684 in gdk_pixmap_unref () from /opt/gnome/lib/libgdk-1.2.so.0
#7  0x41415bee in nsDrawingSurfaceGTK::~nsDrawingSurfaceGTK ()
   from /home/chb/builds/gtk1-build/dist/bin/components/libgfx_gtk.so
#8  0x41415844 in nsDrawingSurfaceGTK::Release () from
/home/chb/builds/gtk1-build/dist/bin/components/libgfx_gtk.so
#9  0x4141b634 in nsRenderingContextGTK::~nsRenderingContextGTK ()
   from /home/chb/builds/gtk1-build/dist/bin/components/libgfx_gtk.so
#10 0x4141b0fb in nsRenderingContextGTK::Release () from
/home/chb/builds/gtk1-build/dist/bin/components/libgfx_gtk.so
#11 0x08068ea2 in nsCOMPtr_base::assign_with_AddRef ()
#12 0x40e208cc in nsCOMPtr<nsIRenderingContext>::operator= ()
   from /home/chb/builds/gtk1-build/dist/bin/components/libgklayout.so
#13 0x40e20167 in nsCaret::GetCaretRectAndInvert () from
/home/chb/builds/gtk1-build/dist/bin/components/libgklayout.so
#14 0x40e20012 in nsCaret::DrawCaret () from
/home/chb/builds/gtk1-build/dist/bin/components/libgklayout.so
#15 0x40e20809 in nsCaret::CaretBlinkCallback () from
/home/chb/builds/gtk1-build/dist/bin/components/libgklayout.so
#16 0x40859204 in nsTimerImpl::Fire () from
/home/chb/builds/gtk1-build/dist/bin/libxpcom.so
#17 0x408592df in handleTimerEvent () from
/home/chb/builds/gtk1-build/dist/bin/libxpcom.so
#18 0x40854cef in PL_HandleEvent () from
/home/chb/builds/gtk1-build/dist/bin/libxpcom.so
#19 0x40854c1b in PL_ProcessPendingEvents () from
/home/chb/builds/gtk1-build/dist/bin/libxpcom.so
#20 0x408565cc in nsEventQueueImpl::ProcessPendingEvents () from
/home/chb/builds/gtk1-build/dist/bin/libxpcom.so
#21 0x4120b6bc in event_processor_callback () from
/home/chb/builds/gtk1-build/dist/bin/components/libwidget_gtk.so
#22 0x4120b305 in our_gdk_io_invoke () from
/home/chb/builds/gtk1-build/dist/bin/components/libwidget_gtk.so
#23 0x40293506 in g_io_unix_dispatch () from /opt/gnome/lib/libglib-1.2.so.0
#24 0x40294fbb in g_main_dispatch () from /opt/gnome/lib/libglib-1.2.so.0
#25 0x402958b7 in g_main_iterate () from /opt/gnome/lib/libglib-1.2.so.0
#26 0x4029598f in g_main_run () from /opt/gnome/lib/libglib-1.2.so.0
#27 0x4019bc4f in gtk_main () from /opt/gnome/lib/libgtk-1.2.so.0
#28 0x4120ba18 in nsAppShell::Run () from
/home/chb/builds/gtk1-build/dist/bin/components/libwidget_gtk.so
#29 0x411ea519 in nsAppShellService::Run () from
/home/chb/builds/gtk1-build/dist/bin/components/libnsappshell.so
#30 0x08059f52 in main1 ()
#31 0x0805a8cd in main ()
To reproduce this crash with a gtk1-nightly-trunk it is sufficient to compose an
email, choose 'Address' from the composer menu and close the addressbook with 'OK'.

This bug lasts at least since 20040731. Currently i am using
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a4) Gecko/20040911
*** Bug 259302 has been marked as a duplicate of this bug. ***
From #259302:
Another way of getting the same error is
http://www.croczilla.com/~alex/testcases/textboxcrash.xul.
In release 20040916 I'm still unable to reproduce the error. It looks like the
code has been fixed. Ican'y also reproduce the problem mentioned in comment 10
@#11:
No, the bug isn't fixed. I have just compiled my Nightly from a cvs fetch:
checkout start: Do Sep 16 19:31:31 CEST 2004

Are you sure, that your Mozilla is compiled with gtk1?
Sorry. It's fixed on GTk2 I don't use GTK1 anymore
This bug is similar in results to bug 265148 - Crash after clearing mailnews
search. Error, request & minor codes are all the same. May be the same problem.
*** Bug 251801 has been marked as a duplicate of this bug. ***
Based on the comments in bug 265148, I've done a trawl through the changes given
in the regression window.

It appears that bug 241507 causes the crash - when I back out the change from a
current cvs build this bug and the similar ones that have been reported go away.

Christopher Aillon said he would back out 241507 if it causes problems -
therefore Christopher I've cc'd you to this bug so you know what's been occuring.
*** Bug 265148 has been marked as a duplicate of this bug. ***
Flags: blocking1.8a5?
Flags: blocking1.8a5? → blocking1.8a5+
caillon, are you looking into this? 
Since the issue does not occur with a gtk2 build, does it make more sense to
make the #define DONT_REUSE_RENDERING_CONTEXT dependent on the gtk version
ratht\er than backing out the patch for bug 241507 completely?
No patch and we're otherwise ready to go. This will have to wait until alpha6.
Flags: blocking1.8a5+ → blocking1.8a5-
I'm having the same problem. Waiting for alpha6.
Tom
*** Bug 273266 has been marked as a duplicate of this bug. ***
Flags: blocking1.8a6?
Flags: blocking1.8a6? → blocking1.8a6-
Spoke to caillon on IRC - he is happy that it needs to be modified so that the
#define DONT_REUSE_RENDERING_CONTEXT is only not defined for GTK2 builds.

The patch does the modification, I have checked all the test cases I could find
with gtk1. Blizzard hope you don't mind me doing this - but it'd be nice to fix
this crasher for gtk1 users.

I've made a semi-informed guess at who can r & sr this, if I've got it wrong,
sorry, please can you correct it.
Attachment #170286 - Flags: superreview?(blizzard)
Attachment #170286 - Flags: review?(jst)
Requesting blocking 1.8b - this is a crasher for gtk1 builds, and we now have a 
patch that just needs r & sr approval (see my previous comment).
Flags: blocking1.8b?
Comment on attachment 170286 [details] [diff] [review]
Only reuse rendering content for gtk2 builds.

r=jst
Attachment #170286 - Flags: review?(jst) → review+
Summary: While adding an email address via addressbook to an email mozilla crashes → While adding an email address via addressbook to an email mozilla crashes (gtk1, mail compose)
Flags: blocking1.8b? → blocking1.8b-
Comment on attachment 170286 [details] [diff] [review]
Only reuse rendering content for gtk2 builds.

No review from blizzard for several weeks, passing to roc.
Attachment #170286 - Flags: superreview?(blizzard) → superreview?(roc)
Attachment #170286 - Flags: superreview?(roc) → superreview+
Assignee: blizzard → mark
patch checked in by bz, marking fixed.

2005-02-01 13:19	bzbarsky%mit.edu 	mozilla/ layout/ base/ nsCaret.cpp 	1.141 	2/1
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
*** Bug 280177 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: