Fix crashes in GTK1 builds due to reuse of rendering contexts for the caret. Bug 254049, patch by Mark Banner <mark@standard8.demon.co.uk>, r=jst, sr=roc